2012-01-22  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* cygheap.h (cygheap_fdget::~cygheap_fdget): Simplify now that refcnt
	reports reference count changes itself.
	* fhandler.cc (fhandler_base::reset): Set _refcnt to 0.
	* fhandler.h (fhandler_base::refcnt): Report refcnt when debugging.

	* select.cc (cygwin_select): Set return_on_signal to indicate when
	select should be interrupted.
	(select_stuff::wait): Keep looping unless return_on_signal is set.
	* select.h (select_stuff::return_on_signal): New variable.
	(select_stuff::select_stuff): Zero return_on_signal.

2012-01-20  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (fhandler_registry::opendir): Declare.
	* fhandler_registry.cc (fhandler_registry::opendir): New function.

2012-01-13  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* include/cygwin/config.h (_GLIBC_EXTENSION): Define.

2012-01-11  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* spawn.cc (child_info_spawn::worker): Delete debugging.

2012-01-11  Christopher Faylor  <me.cygwin2012@cgf.cx>

	Update copyright on all files checked in so far this year.
	* fhandler.h: Use #pragma once rather than ifdef guards.
	(fhandler_console::tc_getpgid): Return our pgid if we have never opened
	a console.
	* fork.cc: Rearrange includes to accommodate fhandler.h use of pinfo.h.
	* sigproc.cc: Ditto.
	* spawn.cc: Ditto.
	(child_info_spawn::worker): Query myself->pgid rather than calling
	expensive function.
	* thread.h: Use #pragma once rather than ifdef guards.
	* pinfo.h: Use #pragma once rather than ifdef guards.
	(pinfo::remember): Don't define if sigproc.h has not been included.
	(pinfo::reattach): Ditto.
	* sigproc.h: Use #pragma once rather than ifdef guards.  Use different
	test to see if pinfo.h has been included.

2012-01-09  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/process.h: Move here from newlib.
	* exec.cc: Change include of process.h to reflect the fact that it's
	now in the include/cygwin subfolder.